turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:26: error: expected class or object definition
def colorie (c:Color):Unit={
^Turmite:32: error: expected class or object definition
def posi(c:Color,tab:Array[Color]):Int={
^Turmite:40: error: expected start of definition
	override def run() { 
                 ^Turmite:55: error: Unmatched closing brace '}' ignored here
}
^